fixed some small things after CodePro audit